--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
                     <img src="images/succes3.jpg" alt="Picture 2" class="img-fluid mb-3">
                 </div>
                 <div class="col-md-4 col-sm-12">
-                    <video controls loop class="img-fluid mb-3">
+                     <video controls loop muted class="img-fluid mb-3">
                         <source src="videos/succesvid2.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-md-4 col-sm-12">
-                    <video controls loop class="img-fluid mb-3">
+                    <video controls loop muted class="img-fluid mb-3">
                         <source src="videos/succvid1.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-md-4 col-sm-12">
-                    <video controls loop class="img-fluid mb-3">
+                     <video controls loop muted class="img-fluid mb-3">
                         <source src="videos/successvid5.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="col-md-4 col-sm-12">
-                    <video controls loop class="img-fluid mb-3">
+                     <video controls loop muted class="img-fluid mb-3">
                         <source src="videos/succesvid6.mp4" type="video/mp4">
                     </video>
                 </div>
